# ai01-eval

./: LICENSE  README.md  pyproject.toml
ai01_eval/: __init__.py  datasets.py  exceptions.py  submit.py
ai01_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_client.py  test_datasets.py  test_exceptions.py  test_submit.py
