[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai01-eval"
version = "0.1.0"
description = "Benchmark your AI agent / RAG pipeline on the AI01 leaderboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
keywords = ["llm", "rag", "eval", "benchmark", "ai", "leaderboard"]

[project.urls]
Homepage = "https://ai01.dev/benchmark"
Repository = "https://github.com/cobuild-tech/ai01-dev"
"Bug Tracker" = "https://github.com/cobuild-tech/ai01-dev/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai01_eval*"]
